# YoloImageDetection

./: CMakeLists.txt  README.md
data/config/: yolo-obj.cfg
data/weights/: README.md
src/: yolocam.cpp  yolocam.hpp
src/mediamanager/: mediamanager.cpp  mediamanager.hpp
src/network/: network.cpp  network.hpp
src/processor/: processor.cpp  processor.hpp
